--- a/index.htm
+++ b/index.htm
@@ -18,13 +18,13 @@
     <div class="login">
         <div class="login-input username">
             <div class="login-usern">
-                <img src="/image/name.png">
+                <img src="./image/name.png">
             </div>
             <input type="text" placeholder="enter username here" onfocus="this.placeholder=''" onblur="this.placeholder='enter username here'">
         </div>
         <div class="login-input password">
             <div>
-                <img src="/image/password.png">
+                <img src="./image/password.png">
             </div>
             <input type="password" placeholder="enter password here" onfocus="this.placeholder=''" onblur="this.placeholder='enter password here'">
         </div>
@@ -32,6 +32,6 @@
     </div>
     <div class="login-layer"></div>
     <div class="bottom"></div>
-    <script src="/js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
