--- a/main.htm
+++ b/main.htm
@@ -117,7 +117,7 @@
         </div>
         <div class="bottom">
         </div>
-        <script src="/js/main.js"></script>
+        <script src="./js/main.js"></script>
 </body>
 
 </html>
