--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,13 +20,13 @@
             <div class="login-usern">
                 <img src="image/name.png">
             </div>
-            <input type="text" placeholder="enter username here" onfocus="this.placeholder=''" onblur="this.placeholder='enter username here'">
+            <input type="text" placeholder="enter username here" onfocus="this.placeholder=''" onblur="this.placeholder='enter username here'" id = 'username'/>
         </div>
         <div class="login-input password">
             <div>
                 <img src="image/password.png">
             </div>
-            <input type="password" placeholder="enter password here" onfocus="this.placeholder=''" onblur="this.placeholder='enter password here'">
+            <input type="password" placeholder="enter password here" onfocus="this.placeholder=''" onblur="this.placeholder='enter password here'" id = 'password'/>
         </div>
         <div class="login-button" id="button">Log in</div>
     </div>
