--- a/main.htm
+++ b/main.htm
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>main page</title>
     <link rel="stylesheet" href="css/main.css"></link>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
 </head>
 
 <body>
